<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:layout_marginTop="50dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/judul"
            android:textColor="#fff"
            android:textSize="24sp"/>

        <EditText
            android:id="@+id/etNilai1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/bg_rectangle_edittext"
            android:hint="@string/nilai1"
            android:padding="8dp"
            android:textColor="#80FFFFFF"
            android:textColorHint="#80FFFFFF"
            android:inputType="number"/>


        <EditText
            android:id="@+id/etNilai2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/bg_rectangle_edittext"
            android:hint="@string/nilai1"
            android:padding="8dp"
            android:textColor="#80FFFFFF"
            android:textColorHint="#80FFFFFF"
            android:inputType="number"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnproses"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_proses"
                android:layout_weight="1"
                />

            <Button
                android:id="@+id/btnhapus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_clear"
                android:layout_weight="1"/>

        </LinearLayout>

        <EditText
            android:id="@+id/etHasil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/bg_rectangle_edittext"
            android:padding="8dp"
            android:textColor="#80FFFFFF"
            android:textColorHint="#80FFFFFF"
            android:inputType="none"/>


    </LinearLayout>


</LinearLayout>